# anvil

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: clippy.yml  pre-commit.yml  test.yml
examples/: 00_lego.rs  00_lego.stl  01_hinge.rs  01_hinge.stl
src/: errors.rs  lib.rs
src/core/: angle.rs  axis.rs  dir.rs  edge.rs  length.rs  mod.rs  path.rs  plane.rs  point.rs
src/faces/: face.rs  iterator.rs  mod.rs
src/meshes/: mod.rs  render_mesh.rs  textured_mesh.rs
src/parts/: export.rs  mod.rs  part.rs
src/parts/methods/: add.rs  center.rs  circular_pattern.rs  clone.rs  debug.rs  empty.rs  eq.rs  faces.rs  intersect.rs  linear_pattern.rs  mod.rs  move_by.rs  move_to.rs  rotate_around.rs  scale.rs  step.rs  stl.rs  subtract.rs  volume.rs
src/parts/primitives/: cube.rs  cuboid.rs  cylinder.rs  mod.rs  sphere.rs
src/quantities/: angle.rs  axis2d.rs  axis3d.rs  dir2d.rs  dir3d.rs  length.rs  mod.rs  plane.rs  point2d.rs  point3d.rs
src/sketches/: edge.rs  mod.rs  path.rs  sketch.rs
src/sketches/primitives/: circle.rs  mod.rs  rectangle.rs  square.rs
