[package]
name = "anvil"
version = "0.1.0"
edition = "2024"
description = "An intuitive 3D modeling kernel"
repository = "https://github.com/paramatrix-dev/anvil"
readme = "README.md"
license = "LGPL-2.1-only"
keywords = [
  "3d",
  "3d-design",
  "3d-modeling",
  "cad",
  "cae",
  "computer aided design",
  "computer aided engineering",
  "design",
  "modeling",
  "occt",
  "opencascade",
]

include = [
  "/src",
  "Cargo.toml",
  "LICENSE",
  "README.md",
  "/examples/00_lego.png",
]

[features]
default = ["builtin"]
builtin = [ "opencascade-sys/builtin" ]

[dependencies]
cxx = "1"
iter_fixed = "0.4.0"
opencascade-sys = { git = "https://github.com/bschwind/opencascade-rs", rev = "c30da56647c2a60393984458439180886ecaf951" }
tempfile = "3.19.1"

[dev-dependencies]
tempdir = "0.3.7"
assert_float_eq = "1.1.4"
